--- a/views/webview_callback.ejs
+++ b/views/webview_callback.ejs
@@ -6,9 +6,7 @@
   </form>
   <script>
     function on_click() {
-      var url = 'unity:' + document.forms.form.message.value;
-      console.log(url);
-      window.location.href = url;
+      window.location.href = 'unity:' + document.forms.form.message.value;
     }
   </script>
 </body>
