--- a/views/webview_callback.ejs
+++ b/views/webview_callback.ejs
@@ -1,5 +1,10 @@
 <html>
 <body>
+  <ul>
+    <li><a href='unity:hoge'>callback 'hoge'</a></li>
+    <li><a href='unity:fuga'>callback 'fuga'</a></li>
+  </ul>
+
   <form id="form" action="#">
     <input id="message" type="text" value="message">
     <button onclick="on_click()">Send</button>
