--- a/views/webview_callback.ejs
+++ b/views/webview_callback.ejs
@@ -1,5 +1,12 @@
 <html>
-<body>
+<head>
+  <style type="text/css">
+    input, button {
+      font-size: 100%;
+    }
+  </style>
+</head>
+<body style="font-size: 3em;">
   <ul>
     <li><a href='unity:hoge'>callback 'hoge'</a></li>
     <li><a href='unity:fuga'>callback 'fuga'</a></li>
